test/data/codegen/valid/multi_source_files/directory.cypher
// name: AllPersonIds :many
MATCH (p:Person) RETURN p.id
