test/data/codegen/invalid/out_of_c5_scope_non_property_parameter/queries.cypher
// name: PeoplePaged :many
MATCH (p:Person) RETURN p.id AS id SKIP $offset LIMIT 10
